# Scarlett-OS

./: .gitignore  BOOTABLE_FOUNDATION_COMPLETE.md  BUILD_GUIDE.md  BUILD_TEST_RESULTS.md  CPU_AFFINITY_AND_FILE_OPS_COMPLETE.md  CURRENT_IMPLEMENTATION_STATUS.md  DESKTOP_ROADMAP_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  KERNEL_REVIEW_AND_ROADMAP.md  MULTICORE_STATUS.md  Makefile  Makefile.arm64  PHASE3_PROGRESS.md  PHASES_9_16_COMPLETE_SPEC.md  PHASE_10_IMPLEMENTATION_STATUS.md  PROJECT_FINAL_STATUS.md  README.md  README_COMPLIANCE.md  ROADMAP_COMPLETION_RATING.md  ROADMAP_PROGRESS.md  ROADMAP_TO_DESKTOP.md  SCHEDULER_FIX_STATUS.md  SYSCALL_AND_PREEMPTIVE_COMPLETE.md  all_todos.txt  build_output.txt  debug.txt  grub.cfg  install.sh  limine.cfg  output.txt  qemu_debug.txt  test_kernel.sh  test_kernel_gcc.sh
drivers/: Cargo.toml
drivers/ata/: Cargo.toml  Makefile
drivers/ata/src/: main.rs
drivers/audio/ac97/: ac97.c  ac97.h  ac97_driver.rs
drivers/audio/framework/: audio_framework.h
drivers/audio/hda/: hda.c  hda.h  hda_driver.rs
drivers/audio/usb/: usb_audio_driver.rs
drivers/framework/: Cargo.toml
drivers/framework/src/: dma.rs  interrupts.rs  ipc.rs  lib.rs  mmio.rs  syscalls.rs
drivers/input/keyboard/: Cargo.toml
drivers/input/mouse/: Cargo.toml
drivers/keyboard/: Cargo.toml  Makefile
drivers/keyboard/src/: main.rs
drivers/mouse/: Cargo.toml  Makefile
drivers/mouse/src/: main.rs
drivers/network/ethernet/: Cargo.toml
drivers/network/wifi/: Cargo.toml  Makefile
drivers/pci/: Cargo.toml
drivers/pci/src/: ipc.rs  main.rs
drivers/serial/: Cargo.toml
drivers/serial/src/: lib.rs
drivers/storage/ahci/: Cargo.toml
drivers/storage/ata/: Cargo.toml
gui/compositor/: CMakeLists.txt
gui/window_manager/: CMakeLists.txt  Cargo.toml  Makefile
libs/libgui/: CMakeLists.txt
(+664 files in other folders)
