[workspace]
members = [
    "input/keyboard",
    "input/mouse",
    "storage/ahci",
    "storage/ata",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scarlett OS Team"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scarlett OS Team"]

[workspace.dependencies]
# Common dependencies for all drivers
