[workspace]
members = [
    "framework",
    "storage/ahci",
    "storage/ata",
    "network/ethernet",
    "input/keyboard",
    "input/mouse",
    "serial",
    "bus/usb/common",
    "bus/usb/xhci",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scarlett OS Team"]



[workspace.dependencies]
# Common dependencies for all drivers
